<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-30dp"
        android:adjustViewBounds="true"
        android:alpha=".5"
        android:scaleType="fitCenter"
        android:src="@drawable/regalo" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1" />

            <!--ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_zungu" /-->

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_login"
                android:textColor="@android:color/white"
                android:textSize="28sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="80"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/rounded_edittext"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint_user"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingStart="12dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/colorAccent"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_edittext"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/txtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/hint_pass"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingStart="12dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/colorAccent"
                        android:textSize="14sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/btn_login"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:background="@drawable/rounded_buttom"
                    android:theme="@style/RippleButton" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:background="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:orientation="vertical">


                <Button
                    android:id="@+id/btnLoginFacebook"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/btn_login_fb"
                    android:backgroundTint="@color/colorFacebook"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:background="@drawable/rounded_buttom"
                    android:theme="@style/RippleButton" />

            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>